Fixed 90% html errors

--- a/aboutme1.html
+++ b/aboutme1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Ryan Then</title>
 
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
 		
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
@@ -54,15 +54,15 @@
     <td class= "Contributiontd">4. Apartments page</td>
   </tr>
 </table>
-  <p id="aboutmep">Chinese Malaysian born and raised in Kuching, Sarawak.</p>
-  <p id="aboutmep">I am a student at Swinburne University. My main interests are reading and writing. I run a blog in my free time and attend various local festivals to relax.</p>
+  <p class="aboutmep">Chinese Malaysian born and raised in Kuching, Sarawak.</p>
+  <p class="aboutmep">I am a student at Swinburne University. My main interests are reading and writing. I run a blog in my free time and attend various local festivals to relax.</p>
   <p id="studentid">StudentID: 100086699</p>
 
 </div>
   </div>
   <footer>
     <p id="email_foot">Contact information: <a href="mailto:100086699@students.swinburne.edu.my">100086699@students.swinburne.edu.my</a>.</p>
-  <table cellpadding="5" class="footer_table">
+  <table class="footer_table">
   <tr>
   	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
   </tr>
