--- a/aboutme2.html
+++ b/aboutme2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Alex Haider Abedin</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
 		
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
@@ -50,15 +50,15 @@
     <td class= "Contributiontd">3. Enhancements (Profile image flip effect, Embedded youtube video, Google Maps api)</td>	
 </table>
 
-  <p id="aboutmep">I'm an international student studying in Swinburne Malaysia. What I enjoy learning about the most in CS is machine learning and blockchain.</p>
-  <p id="aboutmep">My main hobbies are playing competitive games and going to the gym. I also enjoy taking photos and love photography. In my hometown we love to eat arabian foods such as shawarmas and kababs. I also have a pet dog named Ralph. </p>
+  <p class="aboutmep">I'm an international student studying in Swinburne Malaysia. What I enjoy learning about the most in CS is machine learning and blockchain.</p>
+  <p class="aboutmep">My main hobbies are playing competitive games and going to the gym. I also enjoy taking photos and love photography. In my hometown we love to eat arabian foods such as shawarmas and kababs. I also have a pet dog named Ralph. </p>
   <p id="studentid">StudentID: 101222478</p>
 
 </div>
   </div>
   <footer>
     <p id="email_foot">Contact information: <a href="mailto:101222478@students.swinburne.edu.my">101222478@students.swinburne.edu.my</a>.</p>
-  <table cellpadding="5" class="footer_table">
+  <table class="footer_table">
   <tr>
   	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
   </tr>
