--- a/aboutme3.html
+++ b/aboutme3.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Jonathan Embas</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
 		
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
@@ -47,15 +47,15 @@
   <tr class = "Contributiontr">
     <td class= "Contributiontd">2. Product (Shops) page </td>
 </table>
-<p id="aboutmep">Iban raised in Peninsular Malaysia. Part-time Musician and Athlete.</p>
-<p id="aboutmep">I was born in Miri, Sarawak and lived there for 7 years before I moved to Terengganu. I lived in Terengganu for 5 years and moved to Selangor and based there to this day. I'm a part-time musician in Kuching and also in KL so I travel a lot within these two places. I have been self-taught since I was 10. I play mainly the drums and can also play the guitar, bass guitar and keyboard. I also play futsal for a local club in Kuching called We United.</p>
+<p class="aboutmep">Iban raised in Peninsular Malaysia. Part-time Musician and Athlete.</p>
+<p class="aboutmep">I was born in Miri, Sarawak and lived there for 7 years before I moved to Terengganu. I lived in Terengganu for 5 years and moved to Selangor and based there to this day. I'm a part-time musician in Kuching and also in KL so I travel a lot within these two places. I have been self-taught since I was 10. I play mainly the drums and can also play the guitar, bass guitar and keyboard. I also play futsal for a local club in Kuching called We United.</p>
   <p id="studentid">StudentID: 101213430</p>
 
 </div>
   </div>
   <footer>
     <p id="email_foot">Contact information: <a href="mailto:101213430@students.swinburne.edu.my">101213430@students.swinburne.edu.my</a>.</p>
-  <table cellpadding="5" class="footer_table">
+  <table class="footer_table">
   <tr>
   	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
   </tr>
