--- a/aboutme4.html
+++ b/aboutme4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 		<title>Jeffery Sia</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
 		
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />		
   </head>
@@ -47,15 +47,15 @@
   <tr class = "Contributiontr">
     <td class= "Contributiontd">2. Products(offices) page</td>
 </table>
-<p id="aboutmep">A boy with average height from Sibu, Sarawak, Malaysia. Likes to play games. The most hated thing is working with empty stomach.</p>
-<p id="aboutmep">Sibu, also known as Swan City, its signature food are kompia and kampua noodles.</p>
+<p class="aboutmep">A boy with average height from Sibu, Sarawak, Malaysia. Likes to play games. The most hated thing is working with empty stomach.</p>
+<p class="aboutmep">Sibu, also known as Swan City, its signature food are kompia and kampua noodles.</p>
   <p id="studentid">StudentID: 101216138</p>
 
 </div>
   </div>
   <footer>
     <p id="email_foot">Contact information: <a href="mailto:101216138@students.swinburne.edu.my">101216138@students.swinburne.edu.my</a>.</p>
-  <table cellpadding="5" class="footer_table">
+  <table class="footer_table">
   <tr>
   	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
   </tr>
