--- a/apartments.html
+++ b/apartments.html
@@ -9,11 +9,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-
+<meta charset="UTF-8">
 <title>Apartments</title>
 
-<link rel="stylesheet" type="text/css" href="style.css">
-
+<link rel="stylesheet" type="text/css" href="styles/style.css">
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
 </head>
@@ -174,11 +173,9 @@
 <br/>
 <br/>
 
-</body>
-
 <footer>
 <p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
-<table cellpadding="5" class="footer_table">
+<table class="footer_table">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
 </tr>
@@ -204,6 +201,9 @@
 </table>
 
 </footer>
+</body>
+
+
 
 
 </html>
