--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-
+<meta charset="UTF-8">
 <title>Homepage</title>
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="styles/style.css">
 
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -46,12 +46,12 @@
 
 <br/>
 <hr/>
-<h5>Offices &#183 Apartments &#183 Houses &#183 Shops</h5>
+<h5>Offices &#183; Apartments &#183; Houses &#183; Shops</h5>
 <div class="centering">
-	<img class="intro_photos" src="images/ind_thumbnail.jpg">
-	<img class="intro_photos" src="images/shop_thumbnail.jpg">
-	<img class="intro_photos" src="images/off_thumbnail.jpg">
-	<img class="intro_photos" src="images/liv_thumbnail.jpg">
+	<img class="intro_photos" src="images/ind_thumbnail.jpg" alt="ind_thumbnail">
+	<img class="intro_photos" src="images/shop_thumbnail.jpg" alt="shop_thumbnail">
+	<img class="intro_photos" src="images/off_thumbnail.jpg" alt="office_thumbnail">
+	<img class="intro_photos" src="images/liv_thumbnail.jpg" alt="room_thumbnail">
 	<br/>
 </div>
 
@@ -156,7 +156,7 @@
 
 <a href="enquiry.html" class="showcase_card">
 <div class="photo_container">
-	<img src="images/shops/premium_shop.jpg" class="products">
+	<img src="images/shops/premium_shop.jpg" alt= "premium shop" class="products">
 	<!--Image taken from http://glamshops.net/reviews/porsche-store-design-in-singapore-->
 	<div class="bottom_left">Kuala Lumpur</div>
 </div>
@@ -168,7 +168,7 @@
 
 <a href="enquiry.html" class="showcase_card">
 <div class="photo_container">
-	<img src="images/shops/large_sized_shop.jpg" class="products">
+	<img src="images/shops/large_sized_shop.jpg" alt="large sized shop" class="products">
 	<!--Image taken from https://sognidarte.com/img/-->
 	<div class="bottom_left">Kuching</div>
 </div>
@@ -192,12 +192,10 @@
 <br/>
 <br/>
 
-</body>
-
 <footer>
 <p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
 
-<table cellpadding="5" class="footer_table">
+<table class="footer_table">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
 </tr>
@@ -223,6 +221,10 @@
 </table>
 
 </footer>
+
+</body>
+
+
 
 
 </html>
