--- a/offices.html
+++ b/offices.html
@@ -8,8 +8,8 @@
 <head>
 
 <title>Offices</title>
-
-<link rel="stylesheet" type="text/css" href="style.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="styles/style.css">
 
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -168,11 +168,9 @@
 <br/>
 <br/>
 
-</body>
-
 <footer>
 <p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
-<table cellpadding="5" class="footer_table">
+<table class="footer_table">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th><th></th>
 </tr>
@@ -198,6 +196,9 @@
 </table>
 
 </footer>
+</body>
+
+
 
 
 </html>
