--- a/template.html
+++ b/template.html
@@ -12,8 +12,7 @@
 
 <title>Rent Properties</title>
 
-<link rel="stylesheet" type="text/css" href="style.css">
-	
+<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
 <body>
@@ -72,11 +71,9 @@
 <br/>
 <br/>
 
-</body>
-
 <footer>
 
-<table cellpadding="5" style="color: white; margin-left: 30px;">
+<table style="color: white; margin-left: 30px;">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
 </tr>
@@ -101,6 +98,9 @@
 </tr>
 </table>
 </footer>
+</body>
+
+
 
 
 </html>
