--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-
+<meta charset="UTF-8">
 <title>About Us</title>
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="styles/style.css">
 
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -63,28 +63,28 @@
 <div class="content_banner">Members</div>
 <div class="centering">
 	<a href="aboutme1.html" class="showcase_profile">
-	<img src="images/members/Ryan.jpeg" class="profile">
+	<img src="images/members/Ryan.jpeg" alt="Ryan" class="profile">
 	<p style="color: black;">Ryan Then<br/>Team Leader</p>
 	</a>
 
 	<a href="aboutme2.html" class="showcase_profile">
-	<img src="images/members/Alex.jpeg" class="profile">
+	<img src="images/members/Alex.jpeg" alt="Alex" class="profile">
 	<p style="color: black;">Alex Haider Abedin<br/>Team Member</p>
 	</a>
 
 	<a href="aboutme3.html" class="showcase_profile">
-	<img src="images/members/Jonathan.jpeg" class="profile">
+	<img src="images/members/Jonathan.jpeg"  alt= "Jonathan" class="profile">
 	<p style="color: black;">Jonathan Embas<br/>Team Member</p>
 	</a>
 
 	<a href="aboutme4.html" class="showcase_profile">
-	<img src="images/members/Jeffery.jpeg" class="profile">
+	<img src="images/members/Jeffery.jpeg" alt= "Jeffery" class="profile">
 	<p style="color: black;">Jeffery Sia<br/>Team Member</p>
 	</a>
 </div>
 <div class="content_banner">Our HQ</div>
 <div class="centering">
-</br>
+<br/>
 <a name="locationanchor"></a>
 <iframe width="1000" height="500" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d63814.26666428048!2d110.357226!3d1.532263!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x69cbf290cfd24bb7!2sSwinburne+University+of+Technology+Sarawak+Campus!5e0!3m2!1sen!2smy!4v1554831591380!5m2!1sen!2smy" ></iframe>
 </div>
@@ -100,11 +100,9 @@
 <br/>
 <br/>
 
-</body>
-
 <footer>
 <p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
-<table class="footer_table" cellpadding="5">
+<table class="footer_table">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
 </tr>
@@ -129,6 +127,10 @@
 </tr>
 </table>
 </footer>
+
+</body>
+
+
 
 
 </html>
