--- a/enquiry.html
+++ b/enquiry.html
@@ -9,10 +9,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-
+<meta charset="UTF-8">
 <title>Enquiry</title>
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="styles/style.css">
 
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 	
@@ -123,7 +123,7 @@
 			<option value="The Spanish Palazzo">The Spanish Palazzo</option>
 			</select> 	
 		<label>Rental duration (months)<input type="number" name="rentalduration" min="0" max="200" value="1" required="required"/></label>
-		<input type="message" id="message" name="enquiry" placeholder="State the reason for your enquiry" size="10" required="required"/>
+		<input type="text" id="message" name="enquiry" placeholder="State the reason for your enquiry" size="10" required="required"/>
 		<input type="submit" value="Submit">
 	</form>
 	
@@ -144,11 +144,9 @@
 <br/>
 <br/>
 
-</body>
-
 <footer>
 <p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
-<table class="footer_table" cellpadding="5">
+<table class="footer_table">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
 </tr>
@@ -173,6 +171,9 @@
 </tr>
 </table>
 </footer>
+</body>
+
+
 
 
 </html>
