--- a/enquiry.html
+++ b/enquiry.html
@@ -38,10 +38,10 @@
 			</div>
 			<a class="menu_about" href="about.html">About Us</a>
 	</div>
-	<span class="headline">
+	<div class="headline">
 	<!-- Change this for different pages -->
 	<h1>Have an enquiry?</h1>
-	</span>
+	</div>
 </header>
 
 <article>
