--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			</div>
 			<a class="menu_about" href="about.html">About Us</a>
 	</div>
-	<span class="headline">
+	<div class="headline">
 		<h1>Beta Real Estate</h1>
-	</span>
+	</div>
 </header>
 
 <article>
