--- a/product.html
+++ b/product.html
@@ -35,9 +35,9 @@
 			</div>
 			<a class="menu_about" href="about.html">About Us</a>
 	</div>
-	<span class="headline">
+	<div class="headline">
 		<h1>Rent New Properties</h1>
-	</span>
+	</div>
 </header>
 
 <article>
@@ -61,7 +61,7 @@
 	<div class="product_text_headline">
 		<h5>APARTMENTS</h5>
 	</div>
-	<img src="images/apartment.jpg" class="products">
+	<img src="images/apartment.jpg" alt="apartment" class="products">
 	<div class="product_text">
 	Choose from a list of stylish new
 	apartments to call your new home
@@ -71,7 +71,7 @@
 	<div class="product_text_headline">
 		<h5>HOUSES</h5>
 	</div>
-	<img src="images/houses/townhouse.jpg" class="products">
+	<img src="images/houses/townhouse.jpg" alt="townhouse" class="products">
 	<div class="product_text">
 	Choose from a list of stylish new
 	house to call your new home
@@ -85,7 +85,7 @@
 	<div class="product_text_headline">
 		<h5>OFFICES</h5>
 	</div>
-	<img src="images/office.jpg" class="products"">
+	<img src="images/office.jpg" alt="office" class="products">
 	<div class="product_text">
 	Choose from a list of stylish new
 	offices to call your new working area
@@ -95,7 +95,7 @@
 	<div class="product_text_headline">
 		<h5>SHOPS</h5>
 	</div>
-	<img src="images/shop_thumbnail.jpg" class="products">
+	<img src="images/shop_thumbnail.jpg" alt="shop_thumbnail" class="products">
 	<div class="product_text">
 	Choose from a list of stylish new
 	shops to call your new working area
@@ -150,7 +150,7 @@
 
 <a href="enquiry.html" class="showcase_card">
 <div class="photo_container">
-	<img src="images/shops/medium_sized_shop.jpg" class="products">
+	<img src="images/shops/medium_sized_shop.jpg" alt="medium_sized_shop" class="products">
 	<!--Image taken from http://tuaim.me/cafe-shop-design/cafe-shop-design-coffee-shop-interior-design-services-contracting-coffee-shop-design-small/-->
 	<div class="bottom_left">Subang Jaya</div>
 </div>
