--- a/enquiry.html
+++ b/enquiry.html
@@ -428,7 +428,7 @@
 		   <option value="s5">Large-sized shop (Kuching)</option>
 		   <option value="s6">Premium shop (Kuala Lumpur)</option>
 		</select>
-		<input type="submit" value="Submit">
+		<input type="submit" value="Submit"/>
 	</form>
 	
 	
